google api key remove

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         <span class="icon flaticon-pawprint-1"></span>
                     </div>
                     <div class="title">Because We Really Care About Your Pets</div>
-                    <h2>Welcome to Pawrex</h2>
+                    <h2>Welcome to Urban Hound</h2>
                 </div>
                 <div class="row clearfix">
                     <!--Image Column-->
