privacy-policy and terms of service page generated

--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/appear.js"></script>
     <script src="js/gallery.js"></script>
-
+    <script src="js/vivus.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/color-settings.js"></script>
 </body>
